feature: adds header desktope

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -22,4 +22,112 @@
       </ul>
     </div>
   </div>
+
+  <div class="uk-container">
+    <div
+      class="uk-flex uk-flex-middle uk-padding-small-top@l uk-padding-small-top@s uk-padding-small-bottom@l uk-padding-small-bottom@s">
+      <a href="#" class="header__logo">
+        <img src="img/pic/logo/i-store-logo.svg" width="116" height="16" alt="">
+      </a>
+
+      <nav class="header__navigation uk-width-expand">
+        <ul class="uk-flex uk-flex-center uk-flex-between">
+          <li>
+            <a href="#">Распродажа</a>
+          </li>
+          <li>
+            <a href="#">Гарантия</a>
+          </li>
+          <li>
+            <a href="#">Доставка и оплата</a>
+          </li>
+          <li>
+            <a href="#">Кредит</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Отзывы</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="header__contacts uk-width-1-4 uk-flex uk-flex-middle">
+        <span>С 10:00 до 21:00<br>без выходных</span>
+        <div class="uk-flex uk-flex-column">
+          <a href="tel:84991131908">
+            <svg width="14" height="14">
+              <use xlink:href="img/symbol/sprite.svg#phone-ico" />
+            </svg>
+            +7 (499) 113 19 08</a>
+          <span>Бесплатно по всей територрии РФ</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="uk-flex">
+      <button class="header__btn-catalog" type="button">
+        <svg width="24" height="6" fill="rgba(255,255,255,.5)">
+          <use xlink:href="img/symbol/sprite.svg#points-ico" />
+        </svg>
+        Каталог товаров
+      </button>
+
+      <div class="search uk-width-expand">
+        <input type="text" placeholder="Поиск по каталогу">
+      </div>
+
+      <div class="cart uk-flex uk-flex-between uk-width-1-6">
+        <span>Корзина</span>
+        <span>2 шт</span>
+      </div>
+    </div>
+  </div>
+
+  <div class="header__bottom uk-container uk-flex uk-flex-middle">
+    <nav class="uk-width-expand">
+      <ul class="uk-flex uk-flex-between">
+        <li>
+          <a class="uk-flex uk-flex-middle" href="#">
+            <img src="img/pic/ico/iphone-ico.svg" width="50" height="46" alt="">
+            <span>iPhone</span>
+          </a>
+        </li>
+        <li>
+          <a class="uk-flex uk-flex-middle" href="#">
+            <img src="img/pic/ico/ipad-ico.svg" width="46" height="48" alt="">
+            <span>iPad</span>
+          </a>
+        </li>
+        <li>
+          <a class="uk-flex uk-flex-middle" href="#">
+            <img src="img/pic/ico/macbook-ico.svg" width="70" height="40" alt="">
+            <span>MacBook и iMac</span>
+          </a>
+        </li>
+        <li>
+          <a class="uk-flex uk-flex-middle" href="#">
+            <img src="img/pic/ico/iwatch-ico.svg" width="23" height="42" alt="">
+            <span>Watch</span>
+          </a>
+        </li>
+        <li>
+          <a class="uk-flex uk-flex-middle" href="#">
+            <img src="img/pic/ico/accessories-ico.svg" width="31" height="46" alt="">
+            <span>Аксессуары</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="header__banner">
+      <img src="img/pic/bg/header-banner.jpg" width="70" height="70" alt="">
+      <span>Новинки уже в наличии</span>
+      <span>iPhone 11 Pro Max</span>
+    </div>
+  </div>
 </div>
