--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,4 +10,7 @@
 @import "vendors/swiper";
 @import "vendors/nice-select";
 
+@import "components/search";
+@import "components/cart";
+
 @import "layout/header"
