feature: adds main banner slider

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,5 +12,7 @@
 
 @import "components/search";
 @import "components/cart";
+@import "components/btn";
+@import "components/main-banner";
 
 @import "layout/header"
