feature: changes breakpoints

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -56,7 +56,7 @@
         </ul>
       </nav>
 
-      <div class="header__contacts uk-width-1-4 uk-flex uk-flex-middle">
+      <div class="header__contacts uk-flex uk-flex-middle">
         <span>С 10:00 до 21:00<br>без выходных</span>
         <div class="uk-flex uk-flex-column">
           <a href="tel:84991131908">
