feature: adds banners

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,7 +1,7 @@
 <script src="js/scripts.min.js"></script>
 
 <button type="button" class="hamburger"
-	style="position: fixed; bottom: 20px; left: 20px; margin-right: 20px; padding: 0; z-index: 99999;"
+	style="position: fixed; bottom: 20px; left: 20px; margin-right: 20px; padding: 0; z-index: 99999; display: inline-block; width: 50px;"
 	data-uk-toggle="target: #uinav">
 	<span
 		style="display: flex; width: 32px; height: 4px; background: #333333; border-radius: 1.5px; margin-bottom: 6px;"></span>
