--- a/src/sass/components/_main-banner.scss
+++ b/src/sass/components/_main-banner.scss
@@ -1,8 +1,7 @@
 .main-banner {
 	position: relative;
 	margin-top: 20px;
-	margin-bottom: 50px;
-	background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.0001) 100%);
+	background: linear-gradient(360deg, #f2f2f2 0%, rgba(255, 255, 255, 0.0001) 100%);
 
 	&__container {
 		overflow: hidden;
