--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,5 +14,6 @@
 @import "components/cart";
 @import "components/btn";
 @import "components/main-banner";
+@import "components/banner";
 
 @import "layout/header"
