feature: adds styles and markups

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,5 +15,6 @@
 @import "components/btn";
 @import "components/main-banner";
 @import "components/banner";
+@import "components/product-card";
 
 @import "layout/header"
