--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,4 +17,5 @@
 @import "components/banner";
 @import "components/product-card";
 
-@import "layout/header"
+@import "layout/header";
+@import "layout/main-features";
