--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,8 @@
 @import "components/main-banner";
 @import "components/banner";
 @import "components/product-card";
+@import "components/field";
 
 @import "layout/header";
 @import "layout/main-features";
+@import "layout/subscribe";
