feature: adds footer

--- a/src/components/subscribe.html
+++ b/src/components/subscribe.html
@@ -1,5 +1,5 @@
 <div
-  class="uk-container bg-fill-width uk-padding-large-top@l uk-padding-large-top@s uk-padding-large-bottom@l uk-padding-large-bottom@s">
+  class="uk-container bg-full-width uk-padding-large-top@l uk-padding-large-top@s uk-padding-large-bottom@l uk-padding-large-bottom@s">
   <div class="subscribe uk-flex uk-child-width-1-2@l uk-child-width-1-2@m uk-flex-wrap uk-flex-between">
     <div>
       <span class="subscribe__title">Подписка на рассылку акций!</span>
