feature: adds footer mobile

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -15,7 +15,7 @@
 
 		<div class="footer__menu uk-padding-large-top@l">
 			<span class="footer__subtitle">Меню</span>
-			<ul>
+			<ul class="uk-flex uk-child-width-1-2 uk-child-width-1-1 uk-flex-wrap uk-flex-column@l">
 				<li>
 					<a href="#">Главная</a>
 				</li>
@@ -53,31 +53,41 @@
 				<li>м. Площадь Восстания, Невский проспект 120;</li>
 				<li>м. Садовая, Ефимова 3А, литер Д</li>
 			</ul>
-			<span>Смотреть карту</span>
+			<span class="footer__btn-map">Смотреть карту</span>
 			<ul class="footer__socials uk-flex uk-flex-middle">
 				<li>
 					<a href="#">
-						<img src="img/pic/logo/viber-logo.svg" alt="">
+						<svg width="30" height="30" fill="#7D539F">
+							<use xlink:href="img/symbol/sprite.svg#viber-logo" />
+						</svg>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/pic/logo/whatsapp-logo.svg" alt="">
+						<svg width="30" height="30" fill="#30CE68">
+							<use xlink:href="img/symbol/sprite.svg#whatsapp-logo" />
+						</svg>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/pic/logo/telegram-logo.svg" alt="">
+						<svg width="32" height="28" fill="#5EA0DA">
+							<use xlink:href="img/symbol/sprite.svg#telegram-logo" />
+						</svg>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/pic/logo/vk-logo.svg" alt="">
+						<svg width="40" height="25" fill="#447EB2">
+							<use xlink:href="img/symbol/sprite.svg#vk-logo" />
+						</svg>
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/pic/logo/insta-logo.svg" alt="">
+						<svg width="30" height="30" fill="#BD2E8F">
+							<use xlink:href="img/symbol/sprite.svg#insta-logo" />
+						</svg>
 					</a>
 				</li>
 			</ul>
