feature: adds question section

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -117,6 +117,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="index.html" style="color: #fff;">Главная</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="contacts.html" style="color: #fff;">Контакты</a>
+			</li>
 		</ul>
 	</div>
 </div>
