--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,8 +17,10 @@
 @import "components/banner";
 @import "components/product-card";
 @import "components/field";
+@import "components/frame";
 
 @import "layout/header";
 @import "layout/main-features";
 @import "layout/subscribe";
 @import "layout/footer";
+@import "layout/question";
