feature: adds mobile image for question section

--- a/src/components/question.html
+++ b/src/components/question.html
@@ -12,8 +12,11 @@
         <button type="button" class="btn">Заказать звонок</button>
       </div>
     </div>
-    <div class="question__image">
-      <img src="img/pic/bg/question-bg.svg" alt="">
-    </div>
+
+    <picture class="question__image">
+      <source srcset="img/pic/bg/question-bg.svg" media="(min-width: 1330px)">
+      <img src="img/pic/bg/question-bg-mobile.svg" alt="">
+    </picture>
+
   </div>
 </div>
