--- a/src/components/question.html
+++ b/src/components/question.html
@@ -1,5 +1,5 @@
 <div
-  class="uk-container bg-full-width uk-padding-large-bottom@l uk-padding-large-bottom@s uk-padding-large-top@l uk-padding-large-top@l">
+  class="uk-container bg-full-width uk-padding-large-bottom@l uk-padding-large-bottom@s uk-padding-large-top@s uk-padding-large-top@l">
   <div class="question uk-child-width-1-2@l uk-flex uk-flex-column-reverse@s">
     <div>
       <span class="question__title">Остались вопросы?</span>
