--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -66,7 +66,10 @@
     }
 
     .uk-subnav {
-      padding-bottom: 10px;
+
+      @include screen(xl) {
+        padding: 0 20px 10px;
+      }
 
       @include screen(l) {
         display: none;
@@ -162,19 +165,23 @@
       }
 
       &.active {
-        background-color: rgba(230, 230, 230, .3);
+        @include screen(l) {
+          background-color: rgba(230, 230, 230, .3);
+        }
 
         &::after {
-          content: "";
-          position: absolute;
-          right: 20px;
-          top: 0;
-          bottom: 0;
-          margin: auto;
-          width: 7px;
-          height: 15px;
-          background: url("../img/pic/ico/arrow.svg") no-repeat;
-          background-size: contain;
+          @include screen (l) {
+            content: "";
+            position: absolute;
+            right: 20px;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            width: 7px;
+            height: 15px;
+            background: url("../img/pic/ico/arrow.svg") no-repeat;
+            background-size: contain;
+          }
         }
       }
 
@@ -206,6 +213,27 @@
   }
 
   &__info {
+    &--on-map {
+      @include screen(xl) {
+        position: absolute;
+        bottom: 25px;
+        left: 0;
+        right: 0;
+        margin: auto;
+        padding: 20px;
+        width: 80%;
+        z-index: 1;
+        background: #ffffff;
+        border: 1px solid #E7E7E7;
+        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+        border-radius: 8px;
+      }
+
+      @include screen(l) {
+        display: none;
+      }
+    }
+
     &-title {
       margin-bottom: 10px;
       position: relative;
