--- a/src/sass/components/_main-banner.scss
+++ b/src/sass/components/_main-banner.scss
@@ -3,23 +3,69 @@
 	margin-top: 20px;
 	background: linear-gradient(360deg, #f2f2f2 0%, rgba(255, 255, 255, 0.0001) 100%);
 
+	@include screen(xl) {
+		padding: 0;
+	}
+
 	&__container {
 		overflow: hidden;
-		box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.05);
-		border-radius: 20px;
+
+		@include screen(l) {
+			box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.05);
+			border-radius: 20px;
+		}
 	}
 
 	.swiper-slide {
-		padding-top: 100px;
-		height: 565px;
 		text-align: center;
 
-		&:nth-of-type(1) {
-			background: url("../img/pic/bg/main-banner.jpg") no-repeat;
+		@include screen(xl) {
+			padding: 25px 15px 0;
+			width: 90% !important;
+			height: 450px;
+			box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.05);
+			border-radius: 20px;
 		}
 
-		&:nth-of-type(2) {
-			background: url("../img/pic/bg/main-banner.jpg") no-repeat;
+		@include screen(l) {
+			padding-top: 100px;
+			height: 565px;
+		}
+
+		&.slide-1 {
+			@include screen (xl) {
+				background: url("../img/pic/bg/main-banner-mobile.jpg") no-repeat, #000000;
+				background-position: bottom center;
+				background-size: contain;
+			}
+
+			@include screen(l) {
+				background: url("../img/pic/bg/main-banner.jpg") no-repeat;
+			}
+		}
+
+		&.slide-2 {
+			@include screen (xl) {
+				background: url("../img/pic/bg/main-banner-mobile.jpg") no-repeat, #000000;
+				background-position: bottom center;
+				background-size: contain;
+			}
+
+			@include screen(l) {
+				background: url("../img/pic/bg/main-banner.jpg") no-repeat;
+			}
+		}
+
+		&.slide-3 {
+			@include screen (xl) {
+				background: url("../img/pic/bg/main-banner-mobile.jpg") no-repeat, #000000;
+				background-position: bottom center;
+				background-size: contain;
+			}
+
+			@include screen(l) {
+				background: url("../img/pic/bg/main-banner.jpg") no-repeat;
+			}
 		}
 
 		p {
@@ -27,6 +73,7 @@
 
 			&:nth-of-type(1) {
 				@include screen(xl) {
+					margin-bottom: 15px;
 					font: 500 26px/34px FuturaPT;
 				}
 
