feature: adds page reviews

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -120,6 +120,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="contacts.html" style="color: #fff;">Контакты</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+					<a href="reviews.html" style="color: #fff;">Отзывы</a>
+				</li>
 		</ul>
 	</div>
 </div>
