--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,6 +18,8 @@
 @import "components/product-card";
 @import "components/field";
 @import "components/frame";
+@import "components/review";
+@import "components/pagination";
 
 @import "layout/header";
 @import "layout/main-features";
@@ -25,3 +27,4 @@
 @import "layout/footer";
 @import "layout/question";
 @import "layout/contacts";
+@import "layout/reviews";
