--- a/src/components/subscribe.html
+++ b/src/components/subscribe.html
@@ -3,7 +3,7 @@
   <div class="subscribe uk-flex uk-child-width-1-2@l uk-child-width-1-2@m uk-flex-wrap uk-flex-between">
     <div>
       <span class="subscribe__title">Подписка на рассылку акций!</span>
-      <p>Получите скидку до 10% на первую покупку за подписку на рассылку.</p>
+      <p>Получите скидку до 10% на первую покупку <br>за подписку на рассылку.</p>
       <div class="field uk-margin-bottom">
         <span class="field__title">Введите свой телефон:</span>
         <input type="text">
