feature: adds article page

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -121,8 +121,11 @@
 				<a href="contacts.html" style="color: #fff;">Контакты</a>
 			</li>
 			<li style="margin-bottom: 10px;">
-					<a href="reviews.html" style="color: #fff;">Отзывы</a>
-				</li>
+				<a href="reviews.html" style="color: #fff;">Отзывы</a>
+			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="article.html" style="color: #fff;">Статья</a>
+			</li>
 		</ul>
 	</div>
 </div>
