feature: adds articles page

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -126,6 +126,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="article.html" style="color: #fff;">Статья</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="articles.html" style="color: #fff;">Новости</a>
+			</li>
 		</ul>
 	</div>
 </div>
