--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -59,6 +59,11 @@
       }
     }
 
+    &--active {
+      background: #2C0952;
+      color: #ffffff;
+    }
+
     &--prev,
     &--next {
       position: relative;
