--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,6 +20,7 @@
 @import "components/frame";
 @import "components/review";
 @import "components/pagination";
+@import "components/article-list";
 
 @import "layout/header";
 @import "layout/main-features";
@@ -29,3 +30,4 @@
 @import "layout/contacts";
 @import "layout/reviews";
 @import "layout/article";
+@import "layout/articles";
