--- a/src/components/pagination.html
+++ b/src/components/pagination.html
@@ -12,7 +12,7 @@
         <use xlink:href="img/symbol/sprite.svg#arrow" />
       </svg>
     </a>
-    <a href="#" class="pagination__btn pagination__btn--small">1</a>
+    <a href="#" class="pagination__btn pagination__btn--active pagination__btn--small">1</a>
     <a href="#" class="pagination__btn pagination__btn--small">2</a>
     <a href="#" class="pagination__btn pagination__btn--small">3</a>
     <a href="#" class="pagination__btn pagination__btn--small">4</a>
