--- a/src/sass/layout/_articles.scss
+++ b/src/sass/layout/_articles.scss
@@ -49,7 +49,6 @@
       }
 
       @include screen(l) {
-        margin-right: 30px;
         max-width: 365px;
         max-height: 240px;
       }
@@ -70,6 +69,53 @@
       margin-bottom: 10px;
       font: 500 22px/26px FuturaPT;
       color: #30373D;
+    }
+  }
+
+  &__sort {
+    padding: 5px;
+    max-width: max-content;
+    border: 1px solid #E9E9E9;
+    border-radius: 10px;
+    background: #FFFFFF;
+
+    @include screen(xl) {
+      width: 100%;
+      max-width: 400px;
+    }
+
+    a {
+      display: block;
+      padding: 12px 15px;
+      width: 100%;
+      font: 500 12px/16px Roboto;
+      color: #333333;
+      background-color: #ffffff;
+      border-radius: 20px;
+      transition: background-color .3s, color .1s;
+      text-align: center;
+
+      &:hover {
+        color: #ffffff;
+        background-color: #2C0952;
+      }
+    }
+
+    li {
+      @include screen(xl) {
+        width: calc(100% / 3);
+      }
+
+      &:not(:last-of-type) {
+        margin-right: 5px;
+      }
+
+      &.active {
+        a {
+          color: #ffffff;
+          background-color: #2C0952;
+        }
+      }
     }
   }
 }
