feature: adds page return-policy

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -4,10 +4,13 @@
 			<a href="#">
 				<img src="img/pic/logo/i-store-logo.svg" width="116" height="16" alt="">
 			</a>
-			<p>Интернет магазин iPhone – это место, где Вы всегда можете найти новинки и проверенные гаджеты, ставшие уже
+			<p>Интернет магазин iPhone – это место, где Вы всегда можете найти новинки и проверенные гаджеты, ставшие
+				уже
 				классикой от компании Apple. В нашем интернет-магазине представлен широкий ассортимент техники Apple по
-				оптимальным ценам. Мы работаем по всей России и предоставляем удобную и быструю доставку. А если Вы хотите
-				купить Айфоны компании Apple лично, то приходите к нам в магазины и мы будем рады помочь Вам в приобретении
+				оптимальным ценам. Мы работаем по всей России и предоставляем удобную и быструю доставку. А если Вы
+				хотите
+				купить Айфоны компании Apple лично, то приходите к нам в магазины и мы будем рады помочь Вам в
+				приобретении
 				желаемого шедевра. Да, именно шедевра, так как продукция Apple способна удивить и покорить даже самых
 				требовательных покупателей.</p>
 			<span>&copy; 2013-2018 Продажа iPhone в СПб</span>
@@ -128,6 +131,9 @@
 			</li>
 			<li style="margin-bottom: 10px;">
 				<a href="articles.html" style="color: #fff;">Новости</a>
+			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="return-policy.html" style="color: #fff;">Политика возврата</a>
 			</li>
 		</ul>
 	</div>
