--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 @import "components/review";
 @import "components/pagination";
 @import "components/article-list";
+@import "components/dotted-list";
 
 @import "layout/header";
 @import "layout/main-features";
@@ -31,3 +32,4 @@
 @import "layout/reviews";
 @import "layout/article";
 @import "layout/articles";
+@import "layout/return-policy";
