--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -7,7 +7,7 @@
 
 body {
     position: relative;
-    font-family: 'FuturaPT', Roboto, sans-serif;
+    font: normal 16px/26px Roboto, sans-serif;
     font-weight: normal;
     background-color: #ffffff;
 }
