feature: adds feature page

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -135,6 +135,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="return-policy.html" style="color: #fff;">Политика возврата</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="delivery.html" style="color: #fff;">Оплата и доставка</a>
+			</li>
 		</ul>
 	</div>
 </div>
