--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,7 @@
 @import "components/pagination";
 @import "components/article-list";
 @import "components/dotted-list";
+@import "components/feature";
 
 @import "layout/header";
 @import "layout/main-features";
@@ -33,3 +34,4 @@
 @import "layout/article";
 @import "layout/articles";
 @import "layout/return-policy";
+@import "layout/delivery";
