--- a/src/sass/layout/_delivery.scss
+++ b/src/sass/layout/_delivery.scss
@@ -124,4 +124,12 @@
       }
     }
   }
+
+  .accordion {
+    ol {
+      list-style-type: decimal;
+      list-style-position: inside;
+      font: normal 14px/24px Roboto;
+    }
+  }
 }
