feature: adds warranty page

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -138,6 +138,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="delivery.html" style="color: #fff;">Оплата и доставка</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="warranty.html" style="color: #fff;">Гарантия</a>
+			</li>
 		</ul>
 	</div>
 </div>
