feature: adds page return

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -141,6 +141,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="warranty.html" style="color: #fff;">Гарантия</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="return.html" style="color: #fff;">Возврат</a>
+			</li>
 		</ul>
 	</div>
 </div>
