--- a/src/sass/layout/_return.scss
+++ b/src/sass/layout/_return.scss
@@ -73,6 +73,10 @@
   &__content {
     background-color: #fff;
 
+    @include screen(xl) {
+      padding: 20px 20px 40px;
+    }
+
     @include screen(l) {
       padding: 30px 40px 50px;
     }
@@ -82,6 +86,10 @@
     background: #F8F8F8;
     border: 1px solid #EAEAEA;
     border-radius: 20px;
+
+    @include screen(xl) {
+      padding: 20px;
+    }
 
     @include screen(l) {
       padding: 40px 40px 30px;
@@ -103,6 +111,18 @@
         border-color: #FF548C;
       }
     }
+
+    br {
+      @include screen(xs) {
+        display: none;
+      }
+    }
+  }
+
+  &__inner-bottom {
+    @include screen(l) {
+      margin: 0 0 0 140px;
+    }
   }
 
   &__subtitle {
@@ -112,7 +132,7 @@
   &__text {
     &-gray {
       font: normal 16px/26px Roboto;
-      opacity: .7;
+      color: rgba(48, 55, 61, .7);
     }
 
     &-green {
