feature: adds page catalog

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -144,6 +144,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="return.html" style="color: #fff;">Возврат</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="catalog.html" style="color: #fff;">Каталог</a>
+			</li>
 		</ul>
 	</div>
 </div>
