--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,6 +23,7 @@
 @import "components/article-list";
 @import "components/dotted-list";
 @import "components/feature";
+@import "components/filter";
 
 @import "layout/header";
 @import "layout/main-features";
@@ -38,3 +39,4 @@
 @import "layout/accordion";
 @import "layout/warranty";
 @import "layout/return";
+@import "layout/catalog";
