--- a/src/sass/base/_general.scss
+++ b/src/sass/base/_general.scss
@@ -37,7 +37,7 @@ button {
         height: 100%;
         width: 100vw;
         z-index: -1;
-        background-color: #F2F2F2;
+        background-color: rgb(248, 248, 248);
     }
 }
 
@@ -56,7 +56,7 @@ button {
         height: 100%;
         width: 100vw;
         z-index: -1;
-        background: linear-gradient(360deg, #f2f2f2 0%, rgba(255, 255, 255, 0.0001) 100%);
+        background: linear-gradient(360deg, rgb(248, 248, 248) 0%, rgba(255, 255, 255, 0.0001) 100%);
     }
 }
 
