--- a/src/sass/layout/_catalog.scss
+++ b/src/sass/layout/_catalog.scss
@@ -1,11 +1,16 @@
 .catalog {
   &__header {
     @include screen(xl) {
-      padding: 10px 20px 20px;
+      padding: 10px 0 20px;
+      border-top: 1px solid #E7E7E7;
     }
 
     &-top {
-      background-color: #FFFFFF;
+      background: #FFFFFF;
+
+      @include screen(xl) {
+        padding: 0 20px 20px;
+      }
 
       @include screen(l) {
         padding: 15px 30px 25px;
@@ -23,6 +28,14 @@
       @include screen(l) {
         border-bottom: 1px solid #E9E9E9;
       }
+    }
+  }
+
+  &__settings {
+    @include screen(xl) {
+      background: #FFFFFF;
+      border-bottom: 1px solid #E7E7E7;
+      box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.05);
     }
   }
 
@@ -82,6 +95,55 @@
       padding: 9px 15px;
       max-width: 250px;
       font: 600 16px/22px FuturaPT;
+    }
+  }
+
+  /* swiper */
+  &__swiper {
+    @include screen(xl) {
+      padding-left: 5px;
+      padding-bottom: 20px;
+      border-bottom: 1px solid rgba(234, 234, 234, .5);
+      overflow: hidden;
+    }
+
+    .swiper-wrapper {
+      @include screen(l) {
+        flex-wrap: wrap;
+        height: auto;
+      }
+    }
+
+    .swiper-slide {
+      @include screen(xl) {
+        width: auto !important;
+      }
+
+      @include screen(l) {
+        margin-top: 10px;
+        width: auto;
+      }
+
+      &:not(:last-of-type) {
+        margin-right: 5px;
+      }
+
+      a {
+        display: block;
+        padding: 10px 15px;
+        width: max-content;
+        font: 500 16px/20px Roboto;
+        color: #30373D;
+        background: #FFFFFF;
+        box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.05);
+        border-radius: 10px;
+        transition: background-color .3s, color .15s;
+
+        &:hover {
+          background-color: #2C0952;
+          color: #ffffff;
+        }
+      }
     }
   }
 }
