feature: adds account-main destope

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -147,6 +147,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="catalog.html" style="color: #fff;">Каталог</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="account-main.html" style="color: #fff;">Личный кабинет</a>
+			</li>
 		</ul>
 	</div>
 </div>
