--- a/src/sass/layout/_account.scss
+++ b/src/sass/layout/_account.scss
@@ -40,7 +40,7 @@
     padding: 0 30px 0 0;
     display: inline-block;
     font: 500 16px/24px FuturaPT;
-    color: #333333;
+    color: #FF548C;
 
     svg {
       position: absolute;
@@ -97,7 +97,7 @@
           }
 
           .account__container-title {
-            margin: 5px;
+            margin-bottom: 5px;
             font: 500 24px/28px FuturaPT;
             color: #ffffff;
           }
@@ -168,24 +168,175 @@
   }
 
   /* -------- */
+}
 
-  /* account__profile */
+.profile {
+  margin-top: 30px;
 
-  &__profile {
+  /* title */
+  .uk-accordion-title:hover,
+  .uk-accordion-title:focus {
+    color: #2B2D30
+  }
+
+  .uk-accordion-title {
     @include screen(l) {
-      padding: 20px 30px 25px;
-      border-left: 1px solid rgba(0, 0, 0, .1);
+      pointer-events: none;
     }
 
-    &-logo {
+    &::before {
       @include screen(l) {
-        width: 80px;
-        height: 80px;
-        border-radius: 50%;
-        overflow: hidden;
+        display: none;
       }
     }
   }
 
-  /* -------- */
+  &__wrap {
+    @include screen(l) {
+      padding: 20px 30px 25px;
+      border-left: 1px solid rgba(0, 0, 0, .1);
+    }
+  }
+
+  &__title {
+    font: 500 24px/28px FuturaPT;
+  }
+
+  &__edit {
+    margin: 0;
+    border-bottom: 1px solid transparent;
+    font: normal 14px/22px Roboto;
+    color: #FF548C;
+    transition: border .3s;
+
+    &:hover {
+      border-color: #FF548C;
+    }
+  }
+
+  &__name {
+    font: 500 28px/33px FuturaPT;
+  }
+
+  &__region {
+    font: normal 16px/22px Roboto;
+    color: rgba(48, 55, 61, .7);
+  }
+
+  &__logo {
+    @include screen(l) {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      overflow: hidden;
+    }
+  }
+
+  &__balance {
+    padding: 15px 0;
+    border-top: 1px solid #EAEAEA;
+
+    span {
+      font: 600 18px/20px FuturaPT;
+      color: #FF548C;
+    }
+
+    button {
+      width: 100%;
+      max-width: 180px;
+      padding: 5px 15px;
+      border: 1px solid transparent;
+      text-align: center;
+      white-space: nowrap;
+      font: 500 16px/22px FuturaPT;
+      color: #F8355E;
+      border-radius: 8px;
+      background-color: #ffffff;
+      transition: box-shadow .3s, color .1s, background-color .3s, border .3s;
+      border: 1px solid #F8355E;
+
+      &:hover {
+        color: #ffffff;
+        background-color: #FF548C;
+        box-shadow: 0px 3px 10px rgba(255, 84, 140, 0.4);
+        border-color: transparent;
+      }
+    }
+  }
+
+  &__data {
+    padding: 20px 0;
+    border-top: 1px solid #EAEAEA;
+
+    li {
+      &:not(:last-of-type) {
+        margin-bottom: 10px;
+      }
+    }
+
+    span:not(.profile__subtitle) {
+      font: normal 16px/22px Roboto;
+    }
+  }
+
+  &__subtitle {
+    display: inline-block;
+    text-transform: uppercase;
+    font: 600 12px/22px FuturaPT;
+    color: rgba(48, 55, 61, .8);
+  }
+
+  &__offers {
+    padding: 20px 0;
+    border-top: 1px solid #EAEAEA;
+
+    .profile__subtitle {
+      margin-bottom: 15px;
+    }
+
+    li {
+      &:not(:last-of-type) {
+        margin-bottom: 10px;
+      }
+    }
+
+    label {
+      font: normal 14px/16px Roboto;
+    }
+  }
+
+  &__referral {
+    padding: 20px 0;
+    border-top: 1px solid #EAEAEA;
+
+    .profile__subtitle {
+      margin-bottom: 15px;
+    }
+
+    &-link {
+      padding: 5px 10px;
+      margin-bottom: 15px;
+      background: #F2F2F2;
+      border-radius: 6px;
+
+      .profile__referral-text {
+        border: none;
+        padding: 0;
+        background: none;
+        font: normal 14px/22px Roboto;
+        color: #FF548C;
+      }
+
+      .profile__referral-copy {
+        cursor: pointer;
+        font: normal 12px/14px Roboto;
+        color: rgba(48, 55, 61, .4);
+        transition: color .3s;
+
+        &:hover {
+          color: #30373D;
+        }
+      }
+    }
+  }
 }
