--- a/src/sass/layout/_account.scss
+++ b/src/sass/layout/_account.scss
@@ -1,13 +1,24 @@
 .account {
+  &__wrapper {
+    @include screen(xl) {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
 
   .title {
-    padding: 30px 30px 0 30px;
-    margin-bottom: 25px;
+    @include screen(l) {
+      padding: 30px 30px 0 30px;
+      margin-bottom: 25px;
+    }
   }
 
   &__list {
-    padding: 0 30px;
     border-bottom: 1px solid rgba(216, 216, 216, .5);
+
+    @include screen(l) {
+      padding: 0 30px;
+    }
 
     a:not(.account__logout) {
       display: inline-block;
@@ -52,42 +63,75 @@
   }
 
   &__content {
-    padding: 30px;
+    @include screen(xl) {
+      padding: 20px;
+    }
+
+    @include screen(l) {
+      padding: 30px;
+    }
   }
 
   /* main */
   &--main {
     .account {
       &__container {
-        padding: 20px 30px;
         border-radius: 15px;
         font: normal 14px/24px Roboto;
 
-        a {
-          display: inline-block;
-          width: max-content;
+        @include screen(xl) {
+          padding: 20px;
+        }
+
+        @include screen(l) {
+          padding: 20px 30px;
+        }
+
+        &-link {
           border-bottom: 1px solid transparent;
           font: 500 16px/22px FuturaPT;
           color: #FF548C;
-          transition: border .3s;
+
+          @include screen(l) {
+            display: inline-block;
+            width: max-content;
+            transition: border .3s;
+          }
 
           &:hover {
-            border-color: #FF548C;
+            @include screen(l) {
+              border-color: #FF548C;
+            }
           }
         }
 
         &--cart {
           min-height: 220px;
-          color: #ffffff;
+          color: rgba(255, 255, 255, .7);
           background: #2C0952;
 
+          .account__container-link {
+            @include screen(xl) {
+              margin-top: 30px;
+            }
+          }
+
           .account__container-left {
-            margin-right: 30px;
-            border-right: 1px solid rgba(255, 255, 255, .2);
+            @include screen(xl) {
+              padding-bottom: 10px;
+              margin-bottom: 10px;
+              border-bottom: 1px solid rgba(255, 255, 255, .2);
+            }
+
+            @include screen(l) {
+              margin-right: 30px;
+              border-right: 1px solid rgba(255, 255, 255, .2);
+            }
           }
 
           .account__container-right {
             font: normal 18px/24px Roboto;
+            color: #ffffff;
 
             li {
               &:not(:last-of-type) {
@@ -108,16 +152,40 @@
           background: #F8F8F8;
           border: 1px solid #EAEAEA;
 
+          .account__container-link {
+            @include screen(xl) {
+              padding-top: 20px;
+              margin-top: 15px;
+              border-top: 1px solid rgba(0, 0, 0, .1);
+            }
+          }
+
           .account__container-left {
-            margin-right: 30px;
-            border-right: 1px solid rgba(0, 0, 0, .1);
+            @include screen(xl) {
+              padding-bottom: 10px;
+              margin-bottom: 10px;
+              border-bottom: 1px solid rgba(0, 0, 0, .1);
+            }
+
+            @include screen(l) {
+              margin-right: 30px;
+              border-right: 1px solid rgba(0, 0, 0, .1);
+            }
           }
 
           .account__container-right {
             &>li:not(:first-of-type) {
-              margin-top: 20px;
-              padding-top: 20px;
               border-top: 1px solid rgba(0, 0, 0, .1);
+
+              @include screen(xl) {
+                margin-top: 15px;
+                padding-top: 15px;
+              }
+
+              @include screen(l) {
+                margin-top: 20px;
+                padding-top: 20px;
+              }
             }
           }
 
@@ -130,7 +198,7 @@
           }
 
           .account__container-title {
-            margin: 5px;
+            margin-bottom: 5px;
             font: 500 24px/28px FuturaPT;
             color: #30373D;
           }
@@ -156,11 +224,18 @@
               color: #27CC00;
             }
           }
+        }
 
-          .account__date {
+        .account__date {
+          font: normal 14px/24px Roboto;
+          color: #30373D;
+
+          @include screen(xl) {
+            align-self: flex-start;
+          }
+
+          @include screen (l) {
             text-align: right;
-            font: normal 14px/24px Roboto;
-            color: #30373D;
           }
         }
       }
@@ -171,7 +246,35 @@
 }
 
 .profile {
-  margin-top: 30px;
+  @include screen(xl) {
+    background: #FFFFFF;
+    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    padding: 15px 15px 20px;
+  }
+
+  @include screen(l) {
+    margin-top: 30px;
+  }
+
+  &__header-mobile {
+    @include screen(xl) {
+      position: relative;
+      padding: 0 20px;
+      margin: 20px 0;
+    }
+
+    a {
+      @include screen(xl) {
+        position: absolute;
+        top: 7px;
+        right: 15px;
+        width: 20px;
+        height: 20px;
+      }
+    }
+
+  }
 
   /* title */
   .uk-accordion-title:hover,
@@ -179,12 +282,37 @@
     color: #2B2D30
   }
 
+  li.uk-open {
+    &>.uk-accordion-title::before {
+      transform: rotate(-180deg);
+    }
+  }
+
   .uk-accordion-title {
+    @include screen(xl) {
+      position: relative;
+    }
+
     @include screen(l) {
       pointer-events: none;
     }
 
     &::before {
+      @include screen(xl) {
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        width: 25px;
+        height: 25px;
+        background: url("../img/pic/ico/arrow-bottom-ico.svg") no-repeat, #E9E9E9;
+        background-size: 10px 7px;
+        background-position: center;
+        border-radius: 50%;
+        transition: transform .3s;
+      }
+
       @include screen(l) {
         display: none;
       }
@@ -192,6 +320,11 @@
   }
 
   &__wrap {
+    @include screen(xl) {
+      padding: 0 20px;
+      margin-bottom: 40px;
+    }
+
     @include screen(l) {
       padding: 20px 30px 25px;
       border-left: 1px solid rgba(0, 0, 0, .1);
@@ -215,20 +348,40 @@
   }
 
   &__name {
-    font: 500 28px/33px FuturaPT;
+    @include screen(xl) {
+      font: 500 24px/28px FuturaPT;
+    }
+
+    @include screen(l) {
+      font: 500 28px/33px FuturaPT;
+    }
   }
 
   &__region {
-    font: normal 16px/22px Roboto;
     color: rgba(48, 55, 61, .7);
+
+    @include screen(xl) {
+      font: normal 14px/22px Roboto;
+    }
+
+    @include screen(l) {
+      font: normal 16px/22px Roboto;
+    }
   }
 
   &__logo {
+    border-radius: 50%;
+    overflow: hidden;
+
+    @include screen(xl) {
+      width: 60px;
+      height: 60px;
+    }
+
     @include screen(l) {
       width: 80px;
       height: 80px;
-      border-radius: 50%;
-      overflow: hidden;
+
     }
   }
 
