feature: adds account cashback

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -150,6 +150,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="account-main.html" style="color: #fff;">Личный кабинет</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="account-cashback.html" style="color: #fff;">Личный кабинет - Кэшбэк</a>
+			</li>
 		</ul>
 	</div>
 </div>
