feature: adds account orders

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -153,6 +153,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="account-cashback.html" style="color: #fff;">Личный кабинет - Кэшбэк</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="account-orders.html" style="color: #fff;">Личный кабинет - Заказы</a>
+			</li>
 		</ul>
 	</div>
 </div>
