feature: adds account reviews

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -156,6 +156,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="account-orders.html" style="color: #fff;">Личный кабинет - Заказы</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="account-reviews.html" style="color: #fff;">Личный кабинет - Отзывы</a>
+			</li>
 		</ul>
 	</div>
 </div>
