feature: adds page account-cart

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -159,6 +159,9 @@
 			<li style="margin-bottom: 10px;">
 				<a href="account-reviews.html" style="color: #fff;">Личный кабинет - Отзывы</a>
 			</li>
+			<li style="margin-bottom: 10px;">
+				<a href="account-cart.html" style="color: #fff;">Личный кабинет - Мои товары</a>
+			</li>
 		</ul>
 	</div>
 </div>
