--- a/src/sass/components/_product-card.scss
+++ b/src/sass/components/_product-card.scss
@@ -84,4 +84,189 @@
       }
     }
   }
+
+
+  &--checkout {
+    position: relative;
+    padding: 15px 0 10px;
+
+    .product-card {
+      position: relative;
+
+      &__image {
+        margin-right: 25px;
+        padding: 0 5px;
+        width: 90px;
+        text-align: center;
+        border-radius: 8px;
+        background: #FFFFFF;
+
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+
+      &__name {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 2;
+        max-height: 50px;
+        margin-bottom: 15px;
+        color: #30373D;
+
+        @include screen(xl) {
+          font: normal 14px/26px Roboto;
+        }
+
+        @include screen(l) {
+          font: normal 16px/26px Roboto;
+        }
+      }
+
+      &__price {
+        margin-bottom: 10px;
+
+        &-old {
+          text-align: right;
+          font: 700 12px/14px Roboto;
+          text-decoration-line: line-through;
+          color: rgba(48, 55, 61, .5);
+        }
+
+        &-total {
+          font: 700 24px/28px Roboto;
+          color: #2C0952;
+        }
+
+        &-sale {
+          padding: 3px 5px 2px;
+          margin: 2px 0 0 0;
+          text-align: center;
+          font: 700 10px/12px Roboto;
+          color: #FF548C;
+          background-color: rgba(255, 84, 140, .2);
+          border-radius: 13px;
+        }
+      }
+
+      &__quantity {
+        padding: 4px;
+        width: 100px;
+        background: #FFFFFF;
+        border: 1px solid #ECECEC;
+        font: normal 17px/20px Roboto;
+        color: #333333;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
+        border-radius: 16px;
+
+        @include screen(xl) {
+          margin-bottom: 15px;
+        }
+
+        input {
+          max-width: 25px;
+          text-align: center;
+          border: none;
+        }
+
+        button {
+          position: relative;
+          width: 24px;
+          height: 24px;
+          border-radius: 50%;
+          background-color: rgba(39, 204, 0, .2);
+          transition: background-color .3s;
+
+          &:hover {
+            background-color: #27CC00;
+
+            svg {
+              fill: #ffffff;
+            }
+          }
+        }
+
+        svg {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          right: 0;
+          left: 0;
+          margin: auto;
+          width: 10px;
+          height: 10px;
+          display: block;
+          fill: #14D75D;
+          transition: fill .3s;
+        }
+      }
+
+      &__close {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 10px 0 10px 10px;
+
+        &:hover {
+          svg {
+            opacity: .7;
+          }
+        }
+
+        svg {
+          width: 20px;
+          height: 20px;
+          fill: rgb(204, 204, 204);
+          transition: opacity .3s;
+        }
+      }
+    }
+  }
+
+  &--present {
+    padding: 10px 0;
+
+    .product-card {
+      &__image {
+        margin-right: 10px;
+        padding: 0 5px;
+        width: 70px;
+        text-align: center;
+        border-radius: 8px;
+        background: #FFFFFF;
+
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+
+      &__name {
+        margin-bottom: 5px;
+        color: #30373D;
+
+        @include screen(xl) {
+          font: normal 14px/26px Roboto;
+        }
+
+        @include screen(l) {
+          width: max-content;
+          font: normal 16px/26px Roboto;
+        }
+      }
+
+      &__price {
+        font: 700 18px/16px Roboto;
+        color: #27CC00;
+
+        @include screen(l) {
+          align-self: flex-end;
+        }
+      }
+    }
+  }
+
 }
